[package]
authors = ["Greg Guthe <greg.guthe@gmail.com>"]
description = "Prints package metadata like pip show, apt-cache show, npm view, gem query, etc."
keywords = ["cargo", "cargo-subcommand", "cli", "dependencies", "crates"]
license = "Apache-2.0/MIT"
name = "cargo-show"
readme = "README.md"
repository = "https://github.com/g-k/cargo-show"
version = "0.5.1"

[[bin]]
name = "cargo-show"
path = "src/main.rs"

[dependencies]
docopt = "0.8.0"
# g-k-crates-io-client = "0.9.0"
g-k-crates-io-client = { git = "https://github.com/pravic/g-k-crates-io-client", branch = "update" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
